patch 1.0 bug fix